<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Greybg"
    android:layout_height="match_parent"
    tools:context=".présentation.vue.FiltreVue">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="122dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/undraw_adventure_re_ncqp" />

    <FrameLayout
        android:id="@+id/bottomSquare"
        android:layout_width="match_parent"
        android:layout_height="541dp"
        android:layout_gravity="bottom"
        android:background="@drawable/carre">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/destinationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Destination"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/dateIntervalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/AucuneDate"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnSelectDates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/SélectionDates" />

            <EditText
                android:id="@+id/peopleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombrePersonnes"
                android:layout_marginBottom="50dp"
                android:background="@drawable/edittext"
                android:padding="12dp"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="number" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PrixParNuit"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <SeekBar
                android:id="@+id/priceSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000" />

            <TextView
                android:id="@+id/priceRangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0 - illimité"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bouton"
                android:padding="12dp"
                android:text="@string/rechercher"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>