<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Greybg"
    tools:context=".présentation.vue.DetailVue">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design" />


    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:contentDescription="Retour"
        android:src="@drawable/arrow_back"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="604dp"
        android:layout_above="@+id/footer"
        android:layout_below="@id/propertyImage"
        android:layout_marginTop="-258dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <ImageView
                android:id="@+id/propertyImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/imageframe"
                android:clipToOutline="true"
                android:gravity="center|top"
                android:scaleType="centerCrop"
                android:src="@drawable/room1" />
            <ImageButton
                android:id="@+id/like"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_margin="10dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="like propriété"
                android:src="@drawable/like"
                android:layout_gravity="top|end" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/propertyTitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:gravity="center|start"
                    android:text="Chambre La Cambronne"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <ImageButton
                    android:id="@+id/btnSelectDates"
                    android:layout_width="87dp"
                    android:layout_height="89dp"
                    android:layout_gravity="center"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/choisir_une_date"
                    android:src="@drawable/calendar" />
            </LinearLayout>

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:text="Nantes, Pays de la Loire, France"
                android:textColor="#777777"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/propos_de_ce_logement"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/propertyDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
                android:textColor="#000000"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="92dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_de_chambres_disponibles"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre_de_chambre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capacite_maximale"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/capacite_maximale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_de_salles_de_bain"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nombre_de_salles_de_bain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pour_votre_confort"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confortText"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="• 1 grand lit\n• Wifi\n• Climatisation\n• Parking"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pour_vous_situer"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp" />
            <ImageView
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/favorite" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PrixParNuit"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/dateChoisie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DateReservePlaceholder"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_server_maintenant"
            android:textColor="#FFFFFF"
            android:backgroundTint="#000000" />
    </LinearLayout>

</RelativeLayout>
